Fixed center text alignment

--- a/src/renderer/assets/sass/styles.scss
+++ b/src/renderer/assets/sass/styles.scss
@@ -103,3 +103,11 @@ main > div { flex-basis: 50%; }
   color: #35495e;
   font-weight: bold;
 }
+
+.margin-center {
+  margin: 0px auto !important;
+}
+
+.background-white {
+  background: white;
+}
